--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
    <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes"></div>
             <button class="botao">Curso na Alura</button>
             <button class="botao">Crir projetos no Javascript</button>
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar currículo</button>
+        
         </div>
     </section>
 </body>
